[workspace]

members = ["lib-validator", "lib-client", "server", "common"]
resolver = "2"

[workspace.package]
version = "0.7.1"
authors = ["Jun Kurihara"]
edition = "2021"
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "./README.md"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
