[package]
name = "rust-token-server-client"
description = "Client library for `rust-token-server`"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

tracing = "0.1.41"
anyhow = "1.0.95"
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chrono = "0.4.39"
tokio = { version = "1.42.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.84"
thiserror = "2.0.9"
rand = { version = "0.8.5", default-features = false, features = [
  "getrandom",
], optional = true }
base64 = { version = "0.22.1", optional = true }
reqwest = { version = "0.12.12", default-features = false, optional = true }


[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }

[features]
default = ["blind-signatures", "reqwest"]
blind-signatures = ["libcommon/blind-signatures", "rand", "base64"]
reqwest = ["dep:reqwest"]
