[package]
name = "rust-token-server-validator"
description = "Validator library for `rust-token-server`"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

anyhow = "1.0.87"
tracing = "0.1.40"
async-trait = "0.1.82"
thiserror = "1.0.63"
url = "2.5.2"
serde_json = "1.0.128"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.40.0", default-features = false, features = [
  "net",
  "macros",
] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
rustc-hash = "2.0.0"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }
dotenvy = "0.15.7"
libclient = { path = "../lib-client/", package = "rust-token-server-client", default-features = false, features = [
  "blind-signatures",
  "reqwest",
] }


[features]
default = ["blind-signatures"]
blind-signatures = ["libcommon/blind-signatures"]
