[package]
name = "rust-token-server-validator"
description = "Validator library for `rust-token-server`"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

anyhow = "1.0.95"
tracing = "0.1.41"
async-trait = "0.1.84"
thiserror = "2.0.9"
url = "2.5.4"
serde_json = "1.0.134"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
tokio = { version = "1.42.0", default-features = false, features = [
  "net",
  "macros",
] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
rustc-hash = "2.1.0"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }
dotenvy = "0.15.7"
libclient = { path = "../lib-client/", package = "rust-token-server-client", default-features = false, features = [
  "blind-signatures",
  "reqwest",
] }


[features]
default = ["blind-signatures"]
blind-signatures = ["libcommon/blind-signatures"]
